ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /weather # ⚙️ Exemple de chemin pour le back
        pathType: Prefix
        backend:
          service:
            name: backend-service # ⚙️ Nom de ton service back
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service # 🖥️ Nom de ton service front
            port:
              number: 3000
